--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </canvas>
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- CDN pdf.js -->
+    <!-- pdf.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.10.377/build/pdf.min.js"></script>
     <script src="index.js"></script>
   </body>
