--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
     </header>
 
     <!-- canvas to place the PDF -->
-    <canvas id="canvas" class="canvas__container">
-      Your browser does not support the HTML5 canvas tag.
-    </canvas>
+    <canvas id="canvas" class="canvas__container"></canvas>
     <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- pdf.js CDN -->
