--- a/index.html
+++ b/index.html
@@ -18,21 +18,24 @@
     <header>
       <ul class="navigation">
         <li class="navigation__item">
-          <!-- page 1 of 5 -->
+          <!-- Navigate to the Previous and Next pages -->
           <a href="#" class="previous round" id="prev-page"
             ><i class="fas fa-arrow-left"></i
           ></a>
 
+          <!-- Navigate to a specific page -->
           <input type="number" value="1" id="current_page" />
 
           <a href="#" class="next round" id="next-page"
             ><i class="fas fa-arrow-right"></i
           ></a>
 
+          <!-- Page Info -->
           Page <span id="page_num"></span> of
           <span id="page_count"></span>
         </li>
 
+        <!-- Zoom In and Out -->
         <li class="navigation__item">
           <button class="zoom" id="zoom_in">
             <i class="fas fa-search-plus"></i>
