--- a/index.html
+++ b/index.html
@@ -7,53 +7,48 @@
     <title>PDF Viewer in jQuery</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/print-js/1.6.0/print.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <ul class="navigation">
         <li class="navigation__item">
-          <!-- Navigate to the Previous and Next pages -->
-          <a href="#" class="previous round" id="prev-page"
+          <a href="#" class="previous round" id="prev_page"
             ><i class="fas fa-arrow-left"></i
           ></a>
-
-          <!-- Navigate to a specific page -->
           <input type="number" value="1" id="current_page" />
-
-          <a href="#" class="next round" id="next-page"
+          <a href="#" class="next round" id="next_page"
             ><i class="fas fa-arrow-right"></i
           ></a>
-
-          <!-- Page Info -->
-          Page <span id="page_num"></span> of
-          <span id="page_count"></span>
+          Page <span id="page_num">1</span> of <span id="page_count">1</span>
         </li>
-
-        <!-- Zoom In and Out -->
         <li class="navigation__item">
           <button class="zoom" id="zoom_in">
             <i class="fas fa-search-plus"></i>
           </button>
-
           <button class="zoom" id="zoom_out">
             <i class="fas fa-search-minus"></i>
           </button>
         </li>
+        <li class="navigation__item">
+          <button class="print-button">
+            <i class="fa-solid fa-print"></i>
+          </button>
+        </li>
       </ul>
     </header>
-
-    <!-- canvas to place the PDF -->
     <canvas id="canvas" class="canvas__container"></canvas>
-    <!-- jQuery CDN -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- pdf.js CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.10.377/build/pdf.min.js"></script>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
